# qibo-qfl-torch

./: .gitignore  centralized_experiments.py  classical_test.py  download_results.ps1  parallel_experiments.py  parallel_tuning.py  plot_metrics.py  pyproject.toml  run_experiments.py  test.py  tuning.py
federated_results/iid/mitigated/plots/: fedavg_etal0.30894_aggregated.json
federated_results/iid/mitigated/simulations/: fedavg_etal0.30894_seed1.json  fedavg_etal0.30894_seed2.json  fedavg_etal0.30894_seed3.json  fedavg_etal0.30894_seed4.json  fedavg_etal0.30894_seed5.json  fedavg_etal0.30894_seed6.json  fedavg_etal0.30894_seed7.json
federated_results/iid/mitigated_shots/new_simulations/: fedavg_etal0.35_seed1.json  fedavg_etal0.35_seed2.json  fedavg_etal0.35_seed3.json  fedavg_etal0.35_seed4.json  fedavg_etal0.35_seed5.json  fedavg_etal0.35_seed6.json  fedavg_etal0.35_seed7.json
federated_results/iid/mitigation_test/: fedavg_etal0.1_seed700.json
federated_results/iid/noiseless/plots/: fedavg_etal0.30894_aggregated.json
federated_results/iid/noiseless/simulations/: fedavg_etal0.30894_seed1.json  fedavg_etal0.30894_seed2.json  fedavg_etal0.30894_seed3.json  fedavg_etal0.30894_seed4.json  fedavg_etal0.30894_seed5.json  fedavg_etal0.30894_seed6.json  fedavg_etal0.30894_seed7.json
federated_results/iid/noiseless_shots/new_simulations/: fedavg_etal0.35_seed2.json  fedavg_etal0.35_seed3.json  fedavg_etal0.35_seed4.json  fedavg_etal0.35_seed5.json  fedavg_etal0.35_seed6.json  fedavg_etal0.35_seed7.json
federated_results/iid/noiseless_shots/plots/: fedavg_etal0.30894_aggregated.json
federated_results/iid/noiseless_shots/simulations/: fedavg_etal0.30894_seed1.json  fedavg_etal0.30894_seed2.json  fedavg_etal0.30894_seed3.json  fedavg_etal0.30894_seed4.json  fedavg_etal0.30894_seed5.json  fedavg_etal0.30894_seed6.json  fedavg_etal0.30894_seed7.json
federated_results/iid/noiseless_shots/weights/: FedAvg_etal0.30894_seed1.npz  FedAvg_etal0.30894_seed2.npz  FedAvg_etal0.30894_seed3.npz  FedAvg_etal0.30894_seed4.npz  FedAvg_etal0.30894_seed5.npz  FedAvg_etal0.30894_seed6.npz  FedAvg_etal0.30894_seed7.npz
federated_results/iid/noisy/: fedavg_etal0.30894_seed1.json  fedavg_etal0.30894_seed2.json  fedavg_etal0.30894_seed3.json  fedavg_etal0.30894_seed4.json  fedavg_etal0.30894_seed5.json  fedavg_etal0.30894_seed6.json  fedavg_etal0.30894_seed7.json
federated_results/iid/noisy/plots/: fedavg_etal0.30894_aggregated.json
federated_results/iid/noisy/simulations/: fedavg_etal0.30894_seed1.json  fedavg_etal0.30894_seed2.json  fedavg_etal0.30894_seed3.json  fedavg_etal0.30894_seed4.json  fedavg_etal0.30894_seed5.json  fedavg_etal0.30894_seed6.json  fedavg_etal0.30894_seed7.json
federated_results/iid/noisy_shots/new_simulations/: fedavg_etal0.35_seed2.json  fedavg_etal0.35_seed3.json  fedavg_etal0.35_seed4.json  fedavg_etal0.35_seed5.json  fedavg_etal0.35_seed6.json  fedavg_etal0.35_seed7.json
federated_results/iid/noisy_shots/simulations/: fedavg_etal0.30894_seed1.json  fedavg_etal0.30894_seed2.json  fedavg_etal0.30894_seed3.json  fedavg_etal0.30894_seed4.json  fedavg_etal0.30894_seed5.json  fedavg_etal0.30894_seed6.json  fedavg_etal0.30894_seed7.json
federated_results/iid/noisy_shots/test/: fedavg_etal0.1_seed1.json  fedavg_etal0.30894_seed1.json
federated_results/non_iid/mitigated_shots/simulations/: fedavg_etal0.35_seed1.json  fedavg_etal0.35_seed2.json  fedavg_etal0.35_seed3.json  fedavg_etal0.35_seed4.json  fedavg_etal0.35_seed5.json  fedavg_etal0.35_seed6.json  fedavg_etal0.35_seed7.json
federated_results/non_iid/noiseless_shots/simulations/: fedavg_etal0.35_seed1.json  fedavg_etal0.35_seed2.json  fedavg_etal0.35_seed3.json  fedavg_etal0.35_seed4.json  fedavg_etal0.35_seed5.json  fedavg_etal0.35_seed6.json  fedavg_etal0.35_seed7.json
federated_results/non_iid/noisy_shots/simulations/: fedavg_etal0.35_seed1.json  fedavg_etal0.35_seed2.json  fedavg_etal0.35_seed3.json  fedavg_etal0.35_seed4.json  fedavg_etal0.35_seed5.json  fedavg_etal0.35_seed6.json  fedavg_etal0.35_seed7.json
qibo_qfl_pt/: __init__.py  client_app.py  custom_strategy.py  experiment_utils.py  logging_config.py  patches.py  server_app.py  task.py
results/variable_training_set_results/tables/: centralized_noise_mit.tex  combined_comparison_simulations.tex  fedavg_degradation.tex  print_tables.py
results/variable_training_set_results/tables/iid/: fedadagrad_noise_mit.tex  fedadam_noise_mit.tex  fedavg_mit_levels.tex  fedavg_noise_levels.tex  fedavg_noise_mit.tex  fedavg_noise_sources.tex  fedavg_shot_levels.tex  fedavg_uniform_levels.tex  fedprox_noise_mit.tex  fedyogi_noise_mit.tex  iid_simulations.tex  (+1 more)
results/various_tests/fedavg_mitigation_high_threshold/: fedavg_etal0.3_seed1.json  fedavg_etal0.3_seed2.json  fedavg_etal0.3_seed3.json  fedavg_etal0.3_seed4.json  fedavg_etal0.3_seed5.json  fedavg_etal0.3_seed6.json  fedavg_etal0.3_seed7.json
results_hybrid/iid/: fedavg_centralized_aggregated.json  fedavg_hybrid_aggregated.json
run_experiments/: centralized_experiments.py  parallel_experiments.py  parallel_tuning.py  plot_metrics.py
(+5350 files in other folders)
